add labels to secret and use shared library

--- a/packages/multicloud/crossplane/psql/ytt/aws-composition-private.ytt.yml
+++ b/packages/multicloud/crossplane/psql/ytt/aws-composition-private.ytt.yml
@@ -1,6 +1,7 @@
 #@ load("@ytt:data", "data")
 ---
-#@ load("aws-composition.lib.yml", "tfProviderConfig", "tfWorkspace", "rdsInstance", "securityGroup", "securityGroupRule")
+#@ load("aws-composition.lib.yml", "rdsInstance", "securityGroup", "securityGroupRule")
+#@ load("shared.lib.yml", "labelsForSecret", "tfProviderConfig", "tfWorkspace")
 
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
@@ -17,6 +18,7 @@ spec:
     apiVersion: #@ data.values.xrd.group + "/" + data.values.xrd.version
     kind: #@ data.values.xrd.names.kind
   resources:
+  - #@ labelsForSecret("aws")
   - #@ tfProviderConfig(data.values.crossplane.namespace)
   - #@ tfWorkspace(data.values.crossplane.namespace)
   - #@ rdsInstance(data.values.crossplane.namespace, data.values.providers.aws.configRef, False)
