fixup! fix azure test script

--- a/packages/azure/carvel/psql/config/01-flexible-server.ytt.yml
+++ b/packages/azure/carvel/psql/config/01-flexible-server.ytt.yml
@@ -233,7 +233,7 @@ spec:
         app.kubernetes.io/component: #@ data.values.name
         app.kubernetes.io/instance: "$(.server.metadata.name)"
         services.apps.tanzu.vmware.com/class: azure-postgres
-    type: postgresql
+    type: servicebinding.io/postgresql
     stringData:
       type: postgresql
       port: "5432"
