--- a/.github/workflows/reusable-carvel-publish-repo.yml
+++ b/.github/workflows/reusable-carvel-publish-repo.yml
@@ -25,6 +25,9 @@ on:
       repo_version:
         type: string
         required: true
+      prepare_repo_pr:
+        type: boolean
+        default: false
       package_version:
         type: string
         required: true
@@ -74,8 +77,8 @@ jobs:
 
           echo "CURRENT_BRANCH=$(git branch --show-current)" >> $GITHUB_ENV
 
-      - name: Create branch and pull request
-        id: pr
+      - name: Create branch
+        id: branch
         run: |
           # create new branch
           git checkout -b ${REPO_BRANCH_NAME}
@@ -99,6 +102,15 @@ jobs:
 
           # create a new commit on the repo branch and push it to origin
           git add . && git commit -m "${COMMIT_MESSAGE}" && git push -u origin ${REPO_BRANCH_NAME}
+        env:
+          PACKAGES_BASEDIR: ${{ inputs.packages_basedir }}
+          PACKAGES_LIST: ${{ inputs.packages_list }}
+
+      - name: Create pull request
+        id: pr
+        if: inputs.prepare_repo_pr
+        run: |
+          COMMIT_MESSAGE="$(git log --pretty=format:'%s' HEAD~..HEAD)"
 
           # create the pull request against CURRENT_BRANCH
           gh pr create --base ${CURRENT_BRANCH} --title "Carvel repository release at commit ${{ github.sha }}" --body "${COMMIT_MESSAGE}"
@@ -106,8 +118,6 @@ jobs:
           # get pull request number
           echo "PULL_REQUEST_NUMBER=$(gh pr view --json number -q '.number' ${REPO_BRANCH_NAME})" >> $GITHUB_OUTPUT
         env:
-          PACKAGES_BASEDIR: ${{ inputs.packages_basedir }}
-          PACKAGES_LIST: ${{ inputs.packages_list }}
           GH_TOKEN: ${{ github.token }}
 
   publish:
