--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,7 +87,7 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format  
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true 
   - pymdownx.tasklist:
@@ -128,3 +128,7 @@ nav:
     - crossplane/providers/terraform.md
     - crossplane/providers/helm.md
     - crossplane/providers/kubernetes.md
+- CI:
+  - ci/index.md
+  - ci/documentation.md
+  - ci/carvel-crossplane-packages.md
