fix pipelines and crossplane scripts

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,4 +1,4 @@
-name: Deploy gh-pages
+name: Build docs
 
 on:
   pull_request:
@@ -18,12 +18,12 @@ jobs:
           fetch-depth: '0'
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.x
 
       - name: Install Python requirements
         run: pip install -r requirements.txt 
 
-      - name: Deploy GitHub Pages
+      - name: Build documentation
         run: mkdocs build
