fixup! fixup! fixup! fixup! fixup! fixup! add explicit package write permissions

--- a/.github/workflows/reusable-carvel-publish-repo.yml
+++ b/.github/workflows/reusable-carvel-publish-repo.yml
@@ -83,6 +83,8 @@ jobs:
       - name: Create branch
         id: branch
         run: |
+          set -x
+          
           # create new branch
           git checkout -b ${REPO_BRANCH_NAME}
 
