fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! add explicit package write permissions

--- a/.github/workflows/reusable-carvel-publish-repo.yml
+++ b/.github/workflows/reusable-carvel-publish-repo.yml
@@ -85,6 +85,8 @@ jobs:
         run: |
           set -x
           
+          git checkout ${CURRENT_BRANCH}
+
           # create new branch
           git checkout -b ${REPO_BRANCH_NAME}
 
