--- a/.github/workflows/reusable-carvel-publish-repo.yml
+++ b/.github/workflows/reusable-carvel-publish-repo.yml
@@ -102,7 +102,7 @@ jobs:
           trap "tree -a repository ; git push --delete origin ${BRANCHES}" EXIT
 
           # prepare a proper commit message
-          COMMIT_MESSAGE="$(git log --pretty=format:'%s' ${CURRENT_BRANCH} -- .)"
+          COMMIT_MESSAGE="$(git log --pretty=format:'%s' ${CURRENT_BRANCH}..HEAD)"
 
           # discard the existing commits from packages' branches but do keep the changed files
           git reset --soft ${CURRENT_BRANCH}
@@ -117,7 +117,7 @@ jobs:
         id: pr
         if: inputs.prepare_repo_pr
         run: |
-          COMMIT_MESSAGE="$(git log --pretty=format:'%s' HEAD~ -- .)"
+          COMMIT_MESSAGE="$(git log --pretty=format:'%s' HEAD~..HEAD)"
 
           # create the pull request against CURRENT_BRANCH
           gh pr create --base ${CURRENT_BRANCH} --title "Carvel repository release at commit ${{ github.sha }}" --body "${COMMIT_MESSAGE}"
