--- a/.github/workflows/reusable-bump-version.yml
+++ b/.github/workflows/reusable-bump-version.yml
@@ -32,6 +32,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Define default branch
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "DEFAULT_BRANCH=${{ github.head_ref }}" >> $GITHUB_ENV
+          fi
+
       - name: Bump version and push tag
         id: bump
         uses: anothrNick/github-tag-action@1.57.0
